Bug 9470 - Oops with 2.6.24 git when loading iwl3945
Summary: Oops with 2.6.24 git when loading iwl3945
Status: RESOLVED CODE_FIX
Alias: None
Product: Drivers
Classification: Unclassified
Component: network-wireless (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: drivers_network-wireless@kernel-bugs.osdl.org
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-11-28 15:29 UTC by Rafael J. Wysocki
Modified: 2007-12-19 18:18 UTC (History)
0 users

See Also:
Kernel Version: 2.6.24-git
Subsystem:
Regression: ---
Bisected commit-id:


Attachments

Description Rafael J. Wysocki 2007-11-28 15:29:18 UTC
Subject         : Oops with 2.6.24 git when loading iwl3945
Submitter       : "Thomas Tuttle" <linux-kernel@ttuttle.net>
References      : http://lkml.org/lkml/2007/11/27/255
Comment 1 Thomas Tuttle 2007-11-28 15:35:02 UTC
Here is the oops I received.  Thanks for taking a look at it!

ieee80211_crypt: registered algorithm 'NULL'
ieee80211_crypt: registered algorithm 'WEP'
iwl3945: Intel(R) PRO/Wireless 3945ABG/BG Network Connection driver for Linux, 1.1.17kds
iwl3945: Copyright(c) 2003-2007 Intel Corporation
ACPI: PCI Interrupt 0000:0c:00.0[A] -> GSI 17 (level, low) -> IRQ 17
PCI: Setting latency timer of device 0000:0c:00.0 to 64
iwl3945: Detected Intel PRO/Wireless 3945ABG Network Connection
iwl3945: Tunable channels: 11 802.11bg, 13 802.11a channels
general protection fault: 0000 [1] SMP
CPU 0
Modules linked in: iwl3945 ieee80211_crypt_wep ieee80211_crypt mac80211 cfg80211 i915 drm snd_seq_oss snd_seq_device snd_seq_midi_event snd_seq snd_pcm_oss snd_mixer_oss snd_hda_intel snd_pcm snd_timer snd soundcore snd_page_alloc coretemp hwmon rtc rfcomm l2cap hci_usb bluetooth uhci_hcd ehci_hcd usbcore evdev b44 ssb psmouse
Pid: 5230, comm: iwl3945/0 Not tainted 2.6.24-rc3-git2 #1
RIP: 0010:[<ffffffff80300c56>]  [<ffffffff80300c56>] strcmp+0x0/0x1a
RSP: 0018:ffff810074d93dd8  EFLAGS: 00010287
RAX: ffffffff881c2e80 RBX: ffff8100752b84e0 RCX: ffff810074d92000
RDX: ffff810074de2073 RSI: ffffffff881c086b RDI: 000200740000016b
RBP: ffffffff881c8e80 R08: ffff810074d92000 R09: ffff810002bf77a0
R10: 0000000000000000 R11: 0000000000000001 R12: ffffffff88197540
R13: ffff810074de2060 R14: ffff810074de2030 R15: 0000000000000038
FS:  0000000000000000(0000) GS:ffffffff8059d000(0000) knlGS:0000000000000000
CS:  0010 DS: 0018 ES: 0018 CR0: 000000008005003b
CR2: 00002b313ecef000 CR3: 000000007d100000 CR4: 00000000000006e0
DR0: 0000000000000000 DR1: 0000000000000000 DR2: 0000000000000000
DR3: 0000000000000000 DR6: 00000000ffff0ff0 DR7: 0000000000000400
Process iwl3945/0 (pid: 5230, threadinfo ffff810074d92000, task ffff81007c812000)
Stack:  ffffffff88183a0e ffff810074d52220 ffff810074d518c0 ffff810074de2000
 ffffffff881a81e2 0000000000000000 0000000000000000 0000000074d93e30
 0000000000000000 ffff81007c812000 0000000000000000 0000000000000000
Call Trace:
 [<ffffffff88183a0e>] :mac80211:ieee80211_rate_control_register+0x3d/0xdd
 [<ffffffff881a81e2>] :iwl3945:iwl_bg_alive_start+0xc96/0xef9
 [<ffffffff80439984>] thread_return+0x3d/0x81
 [<ffffffff881a754c>] :iwl3945:iwl_bg_alive_start+0x0/0xef9
 [<ffffffff80242755>] run_workqueue+0x7f/0x10b
 [<ffffffff80243071>] worker_thread+0x0/0xe4
 [<ffffffff8024314b>] worker_thread+0xda/0xe4
 [<ffffffff802460c0>] autoremove_wake_function+0x0/0x2e
 [<ffffffff80245fae>] kthread+0x47/0x75
 [<ffffffff8020cc48>] child_rip+0xa/0x12
 [<ffffffff80245f67>] kthread+0x0/0x75
 [<ffffffff8020cc3e>] child_rip+0x0/0x12


Code: 8a 17 89 d0 2a 06 48 ff c6 84 c0 75 09 84 d2 74 05 48 ff c7
RIP  [<ffffffff80300c56>] strcmp+0x0/0x1a
 RSP <ffff810074d93dd8>
Comment 2 Rafael J. Wysocki 2007-12-02 11:49:50 UTC
It's not a regression, iwl3945 was not present in 2.6.23.
Comment 3 Cyrill Gorcunov 2007-12-06 01:43:35 UTC
The patch sent for testing
http://marc.info/?l=linux-wireless&m=119693397518638&w=1
Comment 4 John W. Linville 2007-12-19 18:18:00 UTC
Merged prior to 2.6.24-rc6...

Note You need to log in before you can comment on or make changes to this bug.